--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>ESL Coin Tron | ESL Coin TRX | Home </title>
+        <title>ESL Coin | ESL Coin | Home </title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/ESL%20Coin%20Icon%20100x100.png" />
         <!-- Font Awesome icons (free version)-->
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="index.html">ESL Coin TRX</a>
+                <a class="navbar-brand js-scroll-trigger" href="index.html">ESL Coin</a>
                 <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -64,7 +64,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <div class="container">
-                    <p>ESL Coin TRX is a the Tron based fork implementation of ESL Coin, a community project that is set to disrupt the 84 Billion dollar language learning industry. Running in parallel with its ETH cousin where high gas fees are an issue, ESL Coin TRX will enjoy the benefits of low gas fees offered by the Tronix ecosystem making microtransactions possible.</p>
+                    <p>ESL Coin is a community project that is set to disrupt the 84 Billion dollar language learning industry. Running in parallel with its ETH cousin where high gas fees are an issue, ESL Coin BSC will enjoy the benefits of low gas fees offered by the BSC ecosystem making microtransactions possible.</p>
                 </div>
                 <div class="container">
                     <h3><i class="fas fa-globe mr-3"></i>Background</h3>
@@ -91,13 +91,13 @@
                 </div>
                 <!-- Roadmap Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p><h3>Technical Launch</h3></p><p class="lead"><b>(Codename STUDENT)</b> ESL Coin TRX will launch to the technical community through a daily auction. Token holders can acquire tokens through the auction and can stake ESL Coin TRX with the contract for daily dividends.</p></div>
-                    <div class="col-lg-4 mr-auto"><p><h3>Ecosystem Development</h3></p><p class="lead"><b>(Codename TUTOR)</b> The development team will use the proceeds of the daily auction to support an ecosystem of dApps on the ESL Coin TRX network through in house development and development grants. </p></div>
-                    <div class="col-lg-4 ml-auto"><p><h3>Public Launch</h3></p><p class="lead"><b>(Codename GRADUATE)</b> ESL Coin TRX will be released to the public for purchase at this stage through public exchanges and an internal exchange on the ESL Coin website. A portion of the developer pool will be allocated to liquidity on major exchanges.</p></div>
+                    <div class="col-lg-4 ml-auto"><p><h3>Technical Launch</h3></p><p class="lead"><b>(Codename STUDENT)</b> ESL Coin will launch to the technical community through a fair launch on a decentralized exchange on the BSC network. Token holders can acquire tokens through PancakeSwap.</p></div>
+                    <div class="col-lg-4 mr-auto"><p><h3>Ecosystem Development</h3></p><p class="lead"><b>(Codename TUTOR)</b> The development team will start rolling out an ecosystem of dApps on the ESL Coin BSC network through in house development and development grants. </p></div>
+                    <div class="col-lg-4 ml-auto"><p><h3>Public Launch</h3></p><p class="lead"><b>(Codename GRADUATE)</b> ESL Coin BSC will be released to the wider public for purchase at this stage. A portion of the developer pool will be allocated to paying listing fees on major centralized exchanges like Binance, OKEX and Kucoin.</p></div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p><h3>Governance & DAO</h3></p><p class="lead"><b>(Codename TEACHER)</b> A governance system will be implemented and token holders are invited to partake in the direction and vote on operational aspects of ESL Coin TRX. Voting will be rewarded with tokens from the voting pool.</p></div>
-                    <div class="col-lg-4 mr-auto"><p><h3>Cross Chain Compatibility</h3></p><p class="lead"><b>(Codename PROFESSOR)</b> ESL Coin TRX will work to become cross chain compatible with the ETH network, Polkadot network and other networks. </p></div>
+                    <div class="col-lg-4 ml-auto"><p><h3>Governance & DAO</h3></p><p class="lead"><b>(Codename TEACHER)</b> A governance system will be implemented and token holders are invited to partake in the direction and vote on operational aspects of ESL Coin. Voting will be rewarded with tokens from the voting pool.</p></div>
+                    <div class="col-lg-4 mr-auto"><p><h3>Cross Chain Compatibility</h3></p><p class="lead"><b>(Codename PROFESSOR)</b> ESL Coin will work to become cross chain compatible with the ETH, Polkadot, Cardano, Fantom and Solano Network. </p></div>
                     <div class="col-lg-4 ml-auto"><p><h3>Academic Outreach</h3></p><p class="lead"><b>(Codename DEAN)</b> ESL Coin network will be reaching out to major colleges and universities to build up adoption of ecosystem dapps such as test score transmission platform and verification system for educators.</p></div>
                 </div>
                 <!-- Roadmap Section Button-->
@@ -182,11 +182,11 @@
                 </div>
                 <div class="container">
                     <h3><i class="fas fa-users mr-3"></i>Team</h3>
-                    <p>The ESL Coin TRX team consists of language teachers, community builders and developers with a passion to make English learning a possibility to everyone around the world regardless of socio economic backgrounds. The ESL Coin TRX project is a parallel independent fork of the Eth project. We do hope to work together when we reach Phase 5 - CODENAME Professor (Cross Chain Compatibility).</p>
+                    <p>The ESL Coin team consists of language teachers, community builders and developers with a passion to make English learning a possibility to everyone around the world regardless of socio economic backgrounds. The ESL Coin project is a parallel independent fork of the Eth project. We do hope to work together when we reach Phase 5 - CODENAME Professor (Cross Chain Compatibility).</p>
                 </div>
                 <div class="container">
                     <h3><i class="fas fa-database mr-3"></i>Tokenomics</h3>
-                    <p>ESL Coin TRX is designed to be a <b><u>UTILITY TOKEN</u></b> and the whole project is a huge experiment until we reach DEAN PHASE (Phase 6).</p>
+                    <p>ESL Coin is designed to be a <b><u>UTILITY TOKEN</u></b> and the whole project is a huge experiment until we reach DEAN PHASE (Phase 6).</p>
                     <p>The Tron implementation of ESL Coin will consist of an initial technical launch phase through an auction with a daily emission starting at 250k tokens. The tokens emitted will decrease over time to ensure price stability. A development pool of 3 Million premine is retained by the development team and will be unlocked overtime for the purpose of: </p>
                     <div class="row">
                         <div class="col-lg-6 ml-auto">
@@ -237,8 +237,8 @@
                 </div>
                 <div class="container">
                     <h3><i class="fas fa-gavel mr-3"></i>Governance and DAO</h3>
-                    <p>ESL Coin TRX will eventually evolve into a Decentralized Autonomous Organization (DAO) such that token holders can participate in the governance and operations of the ecosystem.</p>
-                    <p>Run for the ESL Coin TRX senate, contribute to community development and receive airdrops and rewards.</p>
+                    <p>ESL Coin will eventually evolve into a Decentralized Autonomous Organization (DAO) such that token holders can participate in the governance and operations of the ecosystem.</p>
+                    <p>Run for the ESL Coin senate, contribute to community development and receive airdrops and rewards.</p>
                     <p>More information on the DAO and what to expect can be found at the <a class=" text-secondary" href="involve.html#governance">governance section</a></p>
                 </div>
             </div>
@@ -246,7 +246,7 @@
                 <div class="text-center mt-4">
                     <a class="btn btn-xl btn-outline-light" href="https://tronscan.org/#/contract/">
                         <i class="fas fa-book mr-2"></i>
-                        Live ESL Coin TRX Contract.
+                        Live ESL Coin Contract.
                     </a>
                     <a class="btn btn-xl btn-outline-light" href="https://www.diffchecker.com/">
                         <i class="fas fa-code mr-2"></i>
@@ -349,13 +349,13 @@
                 <!-- Involve Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ml-auto">
-                        <p><h3><i class="fas fa-bullhorn mr-3"></i>Spread the Word</h3></p><p class="lead">Tell your friends and others about ESL Coin TRX! Let's build up a community of crypto enthusiasts who would like to school the unschooled population.</p>
+                        <p><h3><i class="fas fa-bullhorn mr-3"></i>Spread the Word</h3></p><p class="lead">Tell your friends and others about ESL Coin! Let's build up a community of crypto enthusiasts who would like to school the unschooled population.</p>
                     </div>
                     <div class="col-lg-4 mr-auto">
-                        <p><h3><i class="fas fa-wrench mr-3"></i>Build dApps on the Ecosystem</h3></p><p class="lead">Are you a developer? We invite you to build dApps for the ESLCoin TRX that are focused on disrupting the language learning ecosystem. </p>
+                        <p><h3><i class="fas fa-wrench mr-3"></i>Build dApps on the Ecosystem</h3></p><p class="lead">Are you a developer? We invite you to build dApps for the ESL Coin that are focused on disrupting the language learning ecosystem. </p>
                     </div>
                     <div class="col-lg-4 ml-auto">
-                        <p><h3><i class="fas fa-users mr-3"></i>Participate</h3></p><p class="lead">Be part of history in the making by getting your hands on some ESL Coin TRX <a href="auction.html">at the auction.</a> Stake them and test out the apps for bounties and rewards.</p>
+                        <p><h3><i class="fas fa-users mr-3"></i>Participate</h3></p><p class="lead">Be part of history in the making by getting your hands on some ESL Coin <a href="auction.html">at the auction.</a> Stake them and test out the apps for bounties and rewards.</p>
                     </div>
                 </div>
             </div>
@@ -380,7 +380,7 @@
                         <a class="btn btn-outline-light btn-social mx-1" href="https://eslcointrx.medium.com/esl-coin-trx-disrupting-the-80-billion-language-learning-industry-47f34eb55a98"><i class="fab fa-fw fa-medium"></i></a>                    </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
-                        <h4 class="text-uppercase mb-4">About ESL Coin TRX</h4>
+                        <h4 class="text-uppercase mb-4">About ESL Coin</h4>
                         <p class="lead mb-0">
                             About ESL Coin TRX is the Tron Based fork implementation of the <a href="http://eslcoin.org">ESL Coin project</A>. 
                         </p>
@@ -390,7 +390,7 @@
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright © ESL Coin TRX 2021</small></div>
+            <div class="container"><small>Copyright © ESL Coin 2021</small></div>
         </div>
         <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
         <div class="scroll-to-top d-lg-none position-fixed">
@@ -455,7 +455,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/tutormatch.png" alt="" />                                    
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-5">TutorMatch is the ‘Tinder’ match making service connecting English native speakers (Language Buddies) with ESL learners. TutorMatch makes it possible for native learners to make a passive income on the go simply by participating in casual conversations with English learners. English learners can pick and choose their language buddy and tutors simply by swiping left or right. Rewards for native speakers are based on length of conversation, quality of conversation (rating from English learner) and overall reputation. Native speakers with higher reputation level can qualify to become an English tutor which unlocks more rewards.</p>
-                                    <p class="mb-5">Using ESL Coin TRX, micropayments can be made possible without the worries of high gas fees on the Ethereum platform.</p>
+                                    <p class="mb-5">Using ESL Coin, micropayments can be made possible without the worries of high gas fees on the Ethereum platform.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -536,7 +536,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/diargram_tpdaap-1420x947.png" alt="" />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5">Using AI technology, users can get instant AI translation from English to a variety of different languages. Users desiring optimal translation output may request to have the AI output be reviewed by a pool of language natives. This system allows natives of foreign languages make passive income on the side in the from of ESL Coin TRX tokens which can be spent on other ESL Coin TRX services in the future or sold at an exchange for FIAT currency.</p>
+                                    <p class="mb-5">Using AI technology, users can get instant AI translation from English to a variety of different languages. Users desiring optimal translation output may request to have the AI output be reviewed by a pool of language natives. This system allows natives of foreign languages make passive income on the side in the from of ESL Coin tokens which can be spent on other ESL Coin services in the future or sold at an exchange for FIAT currency.</p>
                                     <button class="btn btn-primary" data-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
